# neo-event-system

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 03dfeeeb98c3_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  collaboration.py  events.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_event.py  crud_permission.py  crud_user.py
app/db/: base.py  models.py  session.py  sync_session.py
app/schemas/: __init__.py  event.py  permission.py  token.py  user.py
